# New1

./: .gitignore  AGENTS.md  newplan.txt  nmap_full_scan.gnmap  nmap_full_scan.nmap  nmap_full_scan.xml  pentestgpt.db  pyproject.toml  requirements.txt
artifacts/playbooks/: aircrack-ng.md
artifacts/tool_recipes/: run_wifi_network_named_fiber_4k-1100_using_wlan1.json  test_nmap_scan.json
config/: .env  .env.example  config.yaml  config.yaml.example
db/: kali_tools.db
logs/: chat_20260415_035716.jsonl  chat_20260415_062433.jsonl  chat_20260415_062721.jsonl
memory/skills/: run_wifi_network_named_fiber_4k-1100_using_wlan1.md  test_nmap_scan.md
memory/vectors/: chroma.sqlite3
prompts/: generator.yaml  parser.yaml  planner.yaml  reasoner.yaml  skill_writer.yaml  summarizer.yaml
src/: __init__.py
src/pentestgpt/: __init__.py  config.py  llm_client.py  prompts.py  scope.py
src/pentestgpt/aci/: __init__.py  base.py  gdb_interface.py  msf_interface.py  shell_interface.py  web_interface.py
src/pentestgpt/campaign/: __init__.py  campaign_manager.py  lateral_movement.py  phase_controller.py  privilege_escalation.py
src/pentestgpt/core/: __init__.py  reflect.py
src/pentestgpt/db/: __init__.py  gptdb.py  schema.py  vector_index.py
src/pentestgpt/executor/: __init__.py  docker_executor.py  interactive_session.py  planner_summarizer.py  shell_executor.py  tool_registry.py
src/pentestgpt/generation/: generator.py
src/pentestgpt/kb/: __init__.py  cli.py  kali_tools_db.py
src/pentestgpt/kb/ingesters/: __init__.py  abuseipdb.py  base.py  cisa_kev.py  kali_help.py  mitre_attck.py  nvd.py  otx.py  shodan.py  threatfox.py  urlhaus.py  virustotal.py
src/pentestgpt/memory/: __init__.py  knowledge_graph.py  memory_store.py  session_diary.py  vector_store.py
src/pentestgpt/parser/: parser.py
src/pentestgpt/reasoning/: __init__.py  reasoner.py  task_tree.py
src/pentestgpt/reporting/: __init__.py  report_generator.py
src/pentestgpt/skills/: __init__.py  skill.py  skill_executor.py  skill_store.py  skill_writer.py
src/pentestgpt/ui/: cli.py  interactive_menu.py  setup_wizard.py  web_ui.py
tests/: test_aci.py  test_campaign.py  test_db.py  test_executor.py  test_memory.py  test_skills.py
