[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pentestgpt"
version = "0.1.0"
description = "PENTESTGPT – LLM-Empowered Automated Penetration Testing Framework (Kali Linux)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "ipaddress",          # stdlib, listed for clarity
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12"]

[project.scripts]
pentestgpt = "pentestgpt.ui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
