[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pentestgpt"
version = "0.1.0"
description = "PENTESTGPT – LLM-Empowered Automated Penetration Testing Framework (Kali Linux)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "litellm>=1.50",
    "questionary>=2.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "ipaddress",          # stdlib, listed for clarity
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    # Phase 1 — executor / tool calling
    "pexpect>=4.9",
    # Phase 2 & 3 — memory + database
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # NimiPlaybook KB additions
    "typer>=0.12",
    "requests>=2.31",
    "tqdm>=4.66",
    "attackcti>=0.3",
    "nvdlib>=0.7",
    "stix2>=3.0",
    "taxii2-client>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12"]
embeddings = ["sentence-transformers>=2.7"]  # optional local embedding model

[project.scripts]
pentestgpt = "pentestgpt.ui.cli:main"
kb         = "pentestgpt.kb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
